Fix crash caused by null callback in MdnsHostLocator

- Fixes issue where switching wifi networks while starting Mdns
  HostLocator would crash chrome.

Bug: chromium:900779
Test: end to end
Change-Id: Ide5e1bb53961dcd654aedadbffc6cf2a83c5d998
Reviewed-on: https://chromium-review.googlesource.com/c/1313331
Reviewed-by: Bailey Berro <baileyberro@chromium.org>
Commit-Queue: jimmy gong <jimmyxgong@chromium.org>
Cr-Commit-Position: refs/heads/master@{#604753}
Former-commit-id: 3d71e5ccae71a73e30f7901d5eab7ce38f64f53d